wxc/include/ewxw/wxc_glue.h

int        wxSpinButton_GetMax( TSelf(wxSpinButton) _obj );
int        wxSpinButton_GetMin( TSelf(wxSpinButton) _obj );
int        wxSpinButton_GetValue( TSelf(wxSpinButton) _obj );
void       wxSpinButton_SetRange( TSelf(wxSpinButton) _obj, int minVal, int maxVal );
void       wxSpinButton_SetValue( TSelf(wxSpinButton) _obj, int val );
/* wxSpinCtrl */
TClassDefExtend(wxSpinCtrl,wxControl)
TClass(wxSpinCtrl) wxSpinCtrl_Create( TClass(wxWindow) _prt, int _id, TString _txt, TRect(_lft,_top,_wdt,_hgt), long _stl, int _min, int _max, int _init );
int        wxSpinCtrl_GetMax( TSelf(wxSpinCtrl) _obj );
int        wxSpinCtrl_GetMin( TSelf(wxSpinCtrl) _obj );
int        wxSpinCtrl_GetValue( TSelf(wxSpinCtrl) _obj );
void       wxSpinCtrl_SetRange( TSelf(wxSpinCtrl) _obj, int min_val, int max_val );
void       wxSpinCtrl_SetValue( TSelf(wxSpinCtrl) _obj, int val );